# MorganaBot

./: .breakpoints  keepalive.py  main.py  music.py  pyproject.toml  quotes.py
