[tool.poetry]
name = "repl_python3_MorganaBot"
version = "0.1.0"
description = ""
authors = ["andresdlRoca <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pafy = "^0.5.5"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
